snapshots/syntax/library/functions/file/lof/lof_do_while.snap
---
source: src/syntax/library/functions/file/lof.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: DoStatement
      children:
        - kind: DoKeyword
          text: Do
        - kind: Whitespace
          text: " "
        - kind: WhileKeyword
          text: While
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: Loc
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "1"
                - kind: RightParenthesis
                  text: )
            - kind: Whitespace
              text: " "
            - kind: LessThanOperator
              text: "<"
            - kind: Whitespace
              text: " "
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: LOF
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "1"
                - kind: RightParenthesis
                  text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: GetStatement
              children:
                - kind: Whitespace
                  text: "                "
                - kind: GetKeyword
                  text: Get
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: IntegerLiteral
                  text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: data
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "            "
        - kind: LoopKeyword
          text: Loop
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
